<resources>
<string name="app_name">Aves Chilenas</string>
<string name="ingresar_nombre">ingresar nombre</string>
<string name="ingresarRut">ingresar rut</string>
<string name="ingresar_email">ingresar e-mail</string>
<string name="ingresar_password">ingrese contraseña</string>
<string name="registrarse">Registrarse</string>
<string name="volver">Volver</string>
<string name="Confirme_password">confirme password</string>
<string name="ingresar_telefono">ingresar telefono</string>
<string name="ingrese_email">ingrese e-mail</string>
<string name="ingrese_password">ingrese password</string>
<string name="iniciar_sesion">Iniciar sesion</string>
<string name="registro">Crear cuenta</string>
<string name="nombre_ave">nombre ave</string>
<string name="link">Link</string>
<string name="confirme_contrasena">confirme contraseña</string>
    <string name="uid">uid</string>
    <string name="nombre_en_espa_ol">nombre en español</string>
    <string name="nombre_de_ave_chilena">Nombre de Ave Chilena</string>
    <string name="sort">sort</string>
    <string name="bienvenidos_a_la_App_de_Aves_Chilenas">  ¡¡ Bienvenidos !!                   a la app de aves Chilenas</string>
    <string name="ir_a_lista_de_aves">Ir a lista de aves</string>
    <string name="name">name</string>
    <string name="nombre_en_espanol">nombre en espanol</string>
    <string name="habitad">habitad</string>
    <string name="didyouknow">didyouknow</string>
    <string name="escuchar_canto_del_ave">Escuchar canto del ave</string>
    <string name="size">size</string>
    <string name="species">species</string>
    <string name="mapa">mapa</string>
    <string name="title">title</string>
    <string name="nombre_en_ingles">nombre en ingles</string>
    <string name="nombre_en_latin">nombre en latin</string>
    <string name="sabias_qu">Sabias qué:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="habitat">Habitat: </string>
    <string name="tama_o">Tamaño:</string>
    <string name="especie">Especie:</string>
    <string name="region_donde_habita">Region donde habita:</string>
    <string name="Buscar">buscar</string>
    <string name="ingrese_nombre_del_ave">ingrese nombre del ave</string>
    <string name="las_aves_conectan_nuestro_mundo">Las aves conectan nuestro mundo !!!</string>
    <string name="volver_a_lista">volver a lista</string>


</resources>