<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_nombre_espanol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/nombre_en_espanol"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_imagen_ave"
        android:layout_width="250sp"
        android:layout_height="250sp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre_en_ingles" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_nombre_en_ingles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
       android:text="@string/nombre_en_ingles"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre_espanol" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_nombre_en_latin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="80dp"
        android:text="@string/nombre_en_latin"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre_espanol" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/descripcion"
        android:textSize="12sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_imagen_ave" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_habitad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/habitad"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_descripcion" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_didyouknow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/didyouknow"
        android:textSize="12sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_habitad" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_size"
        android:layout_width="20dp"
        android:layout_height="11dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:text="@string/size"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_didyouknow" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_species"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:text="@string/species"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_size" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_fotoMapa"
        android:layout_width="250sp"
        android:layout_height="250sp"
        android:layout_marginTop="15dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_species" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="12sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_fotoMapa" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sonido_ave"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:background="@drawable/custom_button"
        android:text="@string/escuchar_canto_del_ave"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textColor="#FDFDFD"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>