<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ContentDescription">



    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:maxLines="1"
        android:inputType="text"
        android:contentDescription="@string/ingresar_nombre"
        android:hint="@string/ingresar_nombre" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_rut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:contentDescription="@string/ingresar_rut"
        android:hint="@string/ingresar_rut" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_marginTop="30dp"
        android:inputType="number"
        android:contentDescription="@string/ingresar_telefono"
        android:hint="@string/ingresar_telefono"

        />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:contentDescription="@string/ingresar_email"
        android:hint="@string/ingresar_email" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:maxLines="1"
        android:inputType="textPassword"
        android:contentDescription="@string/ingresar_password"
        android:hint="@string/ingresar_password" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_confirme_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:maxLines="1"
        android:inputType="textPassword"
        android:contentDescription="@string/confirme_password"
        android:hint="@string/confirme_password"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_registrar"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/registrarse" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_volver"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/volver" />
    </LinearLayout>


</LinearLayout>